solved the single number problem learning the xor operation and how it can be used to solve this as well as learning the built in python counter method and using that as well

--- a/TODO
+++ b/TODO
@@ -37,6 +37,7 @@
     [x] add binaries
     [x] climb stairs
     [x] sqrt x
+    [x] single number 
     [] number of one bits
     [] hamming distance
 
