solved max depth bst problem

--- a/TODO
+++ b/TODO
@@ -51,6 +51,7 @@
     [x] return in order node values traversal
     [x] check if two trees are identical
     [x] check if a tree is symmetrical (mirrored) on left + right
+    [x] max depth
     [] validate a bst 
     [] lowest common ancestor
     [] delete node
