solved the is BST balanced problem

--- a/TODO
+++ b/TODO
@@ -53,6 +53,7 @@
     [x] check if a tree is symmetrical (mirrored) on left + right
     [x] max depth
     [x] sorted array to BST
+    [x] is BST balanced 
     [] validate a bst 
     [] lowest common ancestor
     [] delete node
