solved pascals triangle problem

--- a/TODO
+++ b/TODO
@@ -37,7 +37,8 @@
     [x] add binaries
     [x] climb stairs
     [x] sqrt x
-    [x] single number 
+    [x] single number
+    [x] pascal's triangle
     [] number of one bits
     [] hamming distance
 
