solved the get intersecting node of 2 singly linked lists problem

--- a/TODO
+++ b/TODO
@@ -46,6 +46,7 @@
     [x] reverse linked list
     [x] linked list cycle
     [x] remove duplicates from sorted singly
+    [x] get intersecting node
     [] merge two sorted lists
 
 7. BST
