solved the majority element problem

--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@
     [x] merge sorted arrays 
     [x] search insert 
     [x] binary search list 
+    [x] majority element
     [] max sub-array
     [] merge two sorted lists*
 
