solved the add 2 numbers represented in a linked list problem -- redid it after the first solution i did resulted in 2 loops

--- a/TODO
+++ b/TODO
@@ -51,6 +51,7 @@
     [x] remove duplicates from sorted singly
     [x] get intersecting node
     [] merge two sorted lists
+    [x] add two numbers (med)
 
 7. BST
     [x] return in order node values traversal
