solved the length of the longest substring in a string problem

--- a/TODO
+++ b/TODO
@@ -25,6 +25,7 @@
     [x] search insert 
     [x] binary search list 
     [x] majority element
+    [x] length of longest substring (med)
     [] max sub-array
     [] merge two sorted lists*
 
