--- a/TODO
+++ b/TODO
@@ -42,7 +42,8 @@
     [x] single number
     [x] pascal's triangle
     [x] convert column number to excel column title
-    [x] convert excel column title to column number 
+    [x] convert excel column title to column number
+    [x] reverse bits of a 32 bit signed int
     [] number of one bits
     [] hamming distance
 
