solved the count BST nodes problem

--- a/TODO
+++ b/TODO
@@ -67,6 +67,7 @@
     [x] path sum
     [x] preorder traversal
     [x] postorder traversal
+    [x] count nodes
     [] validate a bst 
     [] lowest common ancestor
     [] delete node
