learned the digital root mathematical logic and used it to solve the add digits problem in O(1) time complexity

--- a/TODO
+++ b/TODO
@@ -45,7 +45,7 @@
     [x] convert excel column title to column number
     [x] reverse bits of a 32 bit signed int
     [x] hamming_weight
-    [] number of one bits
+    [x] add digits in number until result is single digit
     [] hamming distance
 
 6. Linked Lists
