solved the summary ranges problem

--- a/TODO
+++ b/TODO
@@ -26,6 +26,7 @@
     [x] binary search list 
     [x] majority element
     [x] length of longest substring (med)
+    [x] summary ranges 
     [] max sub-array
     [] merge two sorted lists*
 
