solved the missing number problem and learned how and why the bitwise xor bitwise approach is better in languages that dont protect agaisnt int overflow

--- a/TODO
+++ b/TODO
@@ -27,6 +27,7 @@
     [x] majority element
     [x] length of longest substring (med)
     [x] summary ranges 
+    [x] missing number
     [] max sub-array
     [] merge two sorted lists*
 
