solved the first bad version problem

--- a/TODO
+++ b/TODO
@@ -28,6 +28,7 @@
     [x] length of longest substring (med)
     [x] summary ranges 
     [x] missing number
+    [x] first bad version
     [] max sub-array
     [] merge two sorted lists*
 
