--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
 2. Strings/Palindromes/Pointers
     [x] palindrome number
     [x] zizzag conversion (med)
+    [x] are 2 strings isomorphic
     [] valid palindrome
     [] longest common prefix
     [] reverse string
