solved the are linked list values a palindrome problem

--- a/TODO
+++ b/TODO
@@ -64,6 +64,7 @@
     [x] remove duplicates from sorted singly
     [x] get intersecting node
     [x] remove elements with target val
+    [x] are linked list values a palindrome
     [] merge two sorted lists
     [x] add two numbers (med)
 
