solved the word pattern problem

--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@
     [x] palindrome number
     [x] zizzag conversion (med)
     [x] are 2 strings isomorphic
+    [x] word pattern
     [] valid palindrome
     [] longest common prefix
     [] reverse string
