commit solved the reverse digits of signed 32 bit integer problem

--- a/TODO
+++ b/TODO
@@ -33,6 +33,7 @@
     [x] summary ranges 
     [x] missing number
     [x] first bad version
+    [x] reverse integer (med)
     [] max sub-array
     [] merge two sorted lists*
 
