solved the nim game problem

--- a/TODO
+++ b/TODO
@@ -58,6 +58,7 @@
     [x] add digits in number until result is single digit
     [x] ugly number 
     [x] is power of 2
+    [x] nim game
     [] hamming distance
 
 6. Linked Lists
