solved the container with the most water problem

--- a/TODO
+++ b/TODO
@@ -59,6 +59,7 @@
     [x] ugly number 
     [x] is power of 2
     [x] nim game
+    [x] container with the most water (med)
     [] hamming distance
 
 6. Linked Lists
